--- a/res/values/strings_cohorte_familia.xml
+++ b/res/values/strings_cohorte_familia.xml
@@ -11,8 +11,14 @@
     <string name="participants">Lista Participantes</string>
     <string name="new_screen_per">Agregar Persona</string>
     <string name="new_room">Agregar cuarto</string>
+    <string name="remove_room">Quitar cuarto de esta casa? Va a quitarla de sus datos y no va a recuperarlo!!</string>
     <string name="new_bed">Agregar cama</string>
+    <string name="view_bed">Ver camas</string>
+    <string name="remove_bed">Quitar cama de este cuarto? Va a quitarla de sus datos y no va a recuperarlo!!</string>
     <string name="new_pbed">Agregar persona</string>
+    <string name="view_pbed">Ver personas en esta cama</string>
+    <string name="edit_pbed">Editar esta persona?</string>
+    <string name="remove_pbed">Quitar persona de esta cama? Va a quitarlo de sus datos y no va a recuperarlo!!</string>
     <string name="new_area">Nuevo ambiente</string>
     <string name="new_survey_1">Encuesta Casa</string>
     <string name="new_survey_2">Encuesta Participante</string>
