--- a/res/values/strings_encuesta_casa_sa.xml
+++ b/res/values/strings_encuesta_casa_sa.xml
@@ -7,23 +7,23 @@
     <string name="tienePatioJardin">¿Tiene patio y/o jardín en su casa?</string>
     <string name="utilizaAbate">¿Utiliza Abate o Temefos?</string>
     <string name="fumiga">¿Fumigan su casa?</string>
-    <string name="cadaCuantoFumiga">¿Cada cuanto fumigan su casa?</string>
+    <string name="cadaCuantoFumiga">¿Cada cuánto fumigan su casa?</string>
 
     <string name="miembroFamConZikaSn">¿A algun miembro de su familia se le diagnostico Zika?</string>
     <string name="cantMiembrosZika">¿A cuantos miembros de su hogar se le ha diagnosticado Zika?</string>
-    <string name="fechaDxZika">¿En que fecha se le diagnostico Zika?</string>
-    <string name="relacionFamZika">¿Que relacion familiar tiene con el participante? (Zika)</string>
+    <string name="fechaDxZika">¿En que año se le diagnostico Zika?</string>
+    <string name="relacionFamZika">¿Que relación familiar tiene con el participante? (Zika)</string>
     <string name="otraRelacionFamZika">Otra relación familiar diagósticado zika</string>
 
     <string name="miembroFamConDengueSn">¿A algun miembro de su familia se le diagnostico Dengue?</string>
     <string name="cantMiembrosDengue">¿A cuantos miembros de su hogar se le ha diagnosticado dengue?</string>
-    <string name="fechaDxDengue">¿En que fecha se le diagnostico dengue?</string>
-    <string name="relacionFamDengue">¿Que relacion familiar tiene con el participante? (Dengue)</string>
+    <string name="fechaDxDengue">¿En que año se le diagnostico dengue?</string>
+    <string name="relacionFamDengue">¿Que relación familiar tiene con el participante? (Dengue)</string>
     <string name="otraRelacionFamDengue">Otra relación familiar diagósticado dengue</string>
 
     <string name="miembroFamConChikSn">¿A algun miembro de su familia se le diagnostico Chikungunya?</string>
     <string name="cantMiembrosChik">¿A cuantos miembros de su hogar se le ha diagnosticado Chikungunya?</string>
-    <string name="fechaDxChik">¿En que fecha se le diagnostico Chikungunya?</string>
-    <string name="relacionFamChik">¿Que relacion familiar tiene con el participante? (Chik)</string>
+    <string name="fechaDxChik">¿En que año se le diagnostico Chikungunya?</string>
+    <string name="relacionFamChik">¿Que relación familiar tiene con el participante? (Chik)</string>
     <string name="otraRelacionFamChik">Otra relación familiar diagósticado Chikungunya</string>
 </resources>
