--- a/res/values/strings_cohorte_familia.xml
+++ b/res/values/strings_cohorte_familia.xml
@@ -30,6 +30,7 @@
     <string name="new_survey_1">Encuesta Casa</string>
     <string name="new_survey_2">Encuesta Participante</string>
     <string name="environments">Areas</string>
+    <string name="phones">Teléfonos</string>
     <string name="participant">Participante</string>
     <string name="rooms">Cuartos</string>
     <string name="beds">Camas</string>
