--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -3,6 +3,7 @@
 
     <string-array name="menu_main">
         <item>@string/main_1</item>
+        <item>@string/main_1</item>
     </string-array>
     
     <string-array name="menu_cohorte_familia">
@@ -19,6 +20,7 @@
         <item>@string/new_survey_1</item>
         <item>@string/rooms</item>
         <item>@string/environments</item>
+        <item>@string/phones</item>
         <item>@string/new_house_sa_survey</item>
     </string-array>
 
