Modificaciones toma de muestra: Una opción de menu para toma de muestra, se muestra una lista de muestras y se valida el volumen tomado para cada tipo de tubo.

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -29,8 +29,7 @@
         <item>@string/new_survey_3</item>
         <item>@string/new_survey_4</item>
         <item>@string/new_survey_5</item>
-        <item>@string/new_mx_bhc</item>
-        <item>@string/new_mx_rojo</item>
+        <item>@string/samples</item>
         <item>@string/new_participant_sa_survey</item>
     </string-array>
 
