--- a/res/values/strings_muestras.xml
+++ b/res/values/strings_muestras.xml
@@ -34,4 +34,14 @@
     <string name="bhc2ml14">14 años y mas. BHC : 2 ml es el volumen requerido</string>
     <string name="realizaPaxgene">¿Se realiza PaxGene?</string>
     <string name="realizaPaxgeneHint">Indicar si para esta muestra se realiza proceso de PaxGene.\n Nota:La hora que se guarda el formulario es la hora de fin del proceso</string>
+
+    <string name="fechaToma">Fecha de Toma</string>
+    <string name="ml"> (ml)</string>
+    <string name="muestras">Lista de Muestras</string>
+    <string name="samples">Muestras</string>
+    <string name="noSeTomoMuestra">No se tomó muestra</string>
+    <string name="rojo3mlPermitido">6 meses y menos de 2 años. Rojo: 3 ml es el volumen máximo permitido</string>
+    <string name="rojo6mlPermitido">2 años a 13 años. Rojo: 6 ml es el volumen máximo permitido</string>
+    <string name="rojo12mlPermitido">14 años y mas. Rojo: 12 ml es el volumen máximo permitido</string>
+    <string name="bhcMlPermitido">14 años y mas. BHC : 2 ml es el volumen máximo permitido</string>
 </resources>
