- Registrar tamizaje seroprevalencia, dengue e influenza aunque diga que no acepta participar - Cuando no acepta tamizaje, o no acepta participar en cualquiera de los estudios se solicita la razon y si indica otro, se pide la descripción - Recepción de muestras: se quita llave de codigo_mx, fecha y tipo tubo. Ahora se genera un codigo que es la llave, se permite recepcionar el mismo código de mx n veces en el dia

--- a/res/values/strings_recepcion_muestras.xml
+++ b/res/values/strings_recepcion_muestras.xml
@@ -13,4 +13,5 @@
     <string name="error_volumen">Volumen inválido</string>
     <string name="error_codigo">Código inválido</string>
     <string name="error_lugar">Seleccione lugar donde se tomó la muestra</string>
+    <string name="error_codigoMx">Lectura Inválida!!!!</string>
 </resources>
